frame z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body{
 .frame{
     
     display:flex;
-    z-index: 2;
+    z-index: 20;
     position:fixed;
     left:0;
     top:0;
